ruler scrollbar issue.

--- a/css/hic-viz.css
+++ b/css/hic-viz.css
@@ -118,7 +118,7 @@
     left: 25px;
     width: 800px;
     height: 25px;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 .hic-x-axis-ruler-container {
@@ -126,7 +126,7 @@
     bottom:0;
     left: 0;
     width: 100%;
-    height: 25px;
+    height: 100%;
     background-color: white;
 }
 
@@ -134,16 +134,16 @@
     position: absolute;
     top: 25px;
     left: 0;
-    width: 50px;
+    width: 25px;
     height: 800px;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
 }
 
 .hic-y-axis-ruler-container {
     position: relative;
     top: 0;
     right:0;
-    width: 25px;
+    width: 100%;
     height: 100%;
     background-color: white;
 }
